# docs/swagger.json
@@ -17,6 +17,26 @@
                     "users"
                 ],
                 "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "Username to login",
+                        "name": "username",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "Password to login",
+                        "name": "password",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -167,8 +187,22 @@
                     {
                         "type": "file",
                         "description": "CSV file to upload",
-                        "name": "file",
+                        "name": "uploadFile",
                         "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Year",
+                        "name": "year",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Cohort",
+                        "name": "cohort",
+                        "in": "query",
                         "required": true
                     }
                 ],
